2007-02-10  AP Singh Alam  <aalam@users.sf.net>

	* docs/pa/pa.po: Punjabi is added
	* docs/Makefile.am: Punjabi (pa) is added

2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* power-management.c: (power_management_initialise):
	Don't mix declarations and code.

2007-01-25  David Lodge <dave@cirt.net>

	* docs/en_GB/en_GB.po: Added English (British) translation
	* docs/Makefile.am: Added en_GB to DOCS_LINGUAS

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/battstat.xml: Added role=maintainer.
	* power-management.c: Remove duplicated includes.
	* properties.c: Same here.

2006-11-08  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: catch a -1 time and format it correctly

2006-09-21  Ryan Lortie  <desrt@desrt.ca>

	* battstat.h: Rename pixtimer to timeout_id.  Add 'timeout' to record
	  current timeout length.
	* battstat_applet.c: Change pixtimer to timeout_id.  Dynamically
	  determine length of time for next wakeup according to Bug #353885.
	  1 second if on battery.  10 seconds if on AC (reduce polling on
	  servers).

2006-09-21  Ryan Lortie  <desrt@desrt.ca>

	* battstat-hal.c:
	* battstat-hal.h:
	* power-management.c:
	* battstat.h:
	* battstat_applet.c: Add a callback system to notify the applet when
	  changes to the battery state have been reported by HAL (removes the
	  need to poll once per second).  Closes bug #348750.

2006-09-02  Daniel Nylander  <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish documentation
	* docs/sv/figures/*.png: Added screenshots.

2006-07-23  Daniel Nylander  <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish documentation

2006-07-21  Christophe Bliard  <christophe.bliard@trux.info>

	* docs/fr/fr.po: small update in French documentation
	* docs/fr/figures/*.png: updated screenshots
	
2006-07-10  Rodney Dawes  <dobey@novell.com>

	* GNOME_BattstatApplet.server.in.in: