@@ -1,3 +1,8 @@
+2007-06-28  Daniel Drake  <dsd@gentoo.org>
+
+	* acpi-linux.c: 2.6.21 compatibility fix (based on patch by Alan
+	Swanson). Also improved error passing/handling. (#427562)
+
 2007-02-10  AP Singh Alam  <aalam@users.sf.net>
 
 	* docs/pa/pa.po: Punjabi is added
